[package]
name = "red-hare"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "7.0.0-rc2"
toml = "0.9.10+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.29"
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }