[package]
name = "red-hare"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true

[dependencies]
dotenv = "0.15"
dashmap = "7.0.0-rc2"
toml = "0.9.10+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }